--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,9 @@
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 #index-wrapper {
   background-color: rgb(39, 39, 39);
   height: 100vh;
@@ -23,38 +29,6 @@
   padding-right: 10px;
   font-weight: bold;
 }
-
-
-@media (max-width: 900px) {
-  #input-field-url {
-    width: 500px;
-  }
-}
-
-@media (max-width: 600px) {
-  #input-field-url {
-    width: 450px;
-  }
-}
-
-@media (max-width: 500px) {
-  #input-field-url {
-    width: 350px;
-  }
-}
-
-@media (max-width: 400px) {
-  #input-field-url {
-    width: 300px;
-  }
-}
-
-@media (max-width: 300px) {
-  #input-field-url {
-    width: 200px;
-  }
-}
-
 
 #button-container {
   margin-top: 15px;
