convert and download processes finished

--- a/views/frame.html
+++ b/views/frame.html
@@ -11,9 +11,11 @@
   <div id="index-wrapper">
     <div id="index-container">
         {% include 'components/input-url.html' %}
-        
+
     </div>
   </div>
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="/static/js/download.js"></script>
   <script src="/static/js/convert_and_download.js"></script>
 </body>
 </html>
