--- a/views/components/input-url.html
+++ b/views/components/input-url.html
@@ -1,7 +1,10 @@
 <div>
+  <h4 id="error-prompt">Invalid URL</h4>
   <input id="input-field-url" type="text" placeholder="Input YouTube Video URL">
   <br />
   <div id="button-container">
     <a id="convert-and-download">Convert to MP3 and Download</a>
   </div>
+  <h1 class="conv" id="percent">0%</h1>
+  <h3 class="conv" id="conv-d">Converting to MP3 . . .</h3>
 </div>
