--- a/views/frame.html
+++ b/views/frame.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>YT Mp3</title>
+  <link rel="stylesheet" type="text/css" href="/static/css/font.css">
   <link rel="stylesheet" type="text/css" href="/static/css/main.css">
 </head>
 <body>
