--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6,7 +6,7 @@ body, html {
 
 
 #index-wrapper {
-  background-color: rgb(39, 39, 39);
+  background-color: #1d1f21;
   height: 100vh;
   width: 100%;
 }
