--- a/views/components/input-url.html
+++ b/views/components/input-url.html
@@ -1,10 +1,15 @@
-<div>
+<div id="main-div">
+  <h4 id="title">Get MP3 from Youtube Videos<br>with No Deepshits</h4>
   <h4 id="error-prompt">Invalid URL</h4>
   <input id="input-field-url" type="text" placeholder="Input YouTube Video URL">
   <br />
   <div id="button-container">
     <a id="convert-and-download">Convert to MP3 and Download</a>
   </div>
-  <h1 class="conv" id="percent">0%</h1>
+  <h1 class="conv" id="percent">wait motherfucker</h1>
   <h3 class="conv" id="conv-d">Converting to MP3 . . .</h3>
+  <div id="link-container">
+    <a class="link" href="https://github.com/cedie712/youtube-video-to-mp3"><h5><span id="gh">github repository: </span>&nbsp;https://github.com/cedie712/youtube-video-to-mp3</h5></a>
+    <a class="link white-text" href="https://cedie712.github.io"><h5>cedrickvstheworld</h5></a>
+  </div>
 </div>
