--- a/views/frame.html
+++ b/views/frame.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="icon" href="/static/images/download.jpg" type="image/jpg"/>
   <title>YT Mp3</title>
   <link rel="stylesheet" type="text/css" href="/static/css/font.css">
   <link rel="stylesheet" type="text/css" href="/static/css/main.css">
