--- a/views/components/input-url.html
+++ b/views/components/input-url.html
@@ -1,5 +1,5 @@
 <div id="main-div">
-  <h4 id="title">Get MP3 from Youtube Videos<br>with No Deepshits</h4>
+  <h4 id="title">Get MP3 from Youtube Video<br>with No Deepshit</h4>
   <h4 id="error-prompt">Invalid URL</h4>
   <input id="input-field-url" type="text" placeholder="Input YouTube Video URL">
   <br />
